--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/constantinpopa11/eBay-Price-Tracker#readme",
   "dependencies": {
-    "mongodb": "^3.4.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.7"
   }
 }
