--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "base-64": "^0.1.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "fast-sort": "^2.0.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
     "querystring": "^0.2.0"
